# CollegeTracker

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CSV_FORMAT.md  CollegeTracker_zh_CN.ts  DATABASE.md  PROJECT_SHOWCASE.md  README.md  RESUME_DATABASE&FORMAT.md  RESUME_DATABASE.md  RESUME_EXPORT.md  resources.qrc  test_awards.csv  test_courses.csv  test_experiences.csv
.claude/: settings.local.json
.github/workflows/: linux-appimage.yml  macos-package.yml  windows-package.yml
docs/: DATABASE_ER_DIAGRAM.md  PROJECT_SHOWCASE.md
packaging/linux/: com.collegetracker.CollegeTracker.desktop
resources/styles/: mainwindow.qss
src/: main.cpp
src/models/: DatabaseMannager.cpp  DatabaseMannager.h  User.cpp  User.h  user.cpp
src/services/: AppDataPaths.cpp  AppDataPaths.h  AvatarUtils.cpp  AvatarUtils.h  CsvUtils.cpp  CsvUtils.h  ResumeExporter.cpp  ResumeExporter.h  ResumeTemplateRegistry.cpp  ResumeTemplateRegistry.h
src/views/: AddCourseDialog.cpp  AddCourseDialog.h  LoginDialog.cpp  LoginDialog.h  RegisterDialog.cpp  RegisterDialog.h  Theme.h  mainwindow.cpp  mainwindow.h
src/views/dialogs/: LoginDialog.cpp  PhotoCropDialog.cpp  PhotoCropDialog.h
src/views/pages/: CoursePage.cpp  CoursePage.h  ExperiencePage.cpp  ExperiencePage.h  HomePage.cpp  HomePage.h  ResumePage.cpp  ResumePage.h
temp_data/: college_data_20260619.csv  test_courses_random.csv
templates/: resume_template.html  resume_template_editorial.html  resume_template_navy.html
ui/: mainwindow.ui
